# shapeio

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py  tox.ini
shapeio/: __init__.py  compression.py  decoder.py  encoder.py  shape.py  shapeio.py
tests/: conftest.py  test_animation.py  test_animation_nodes.py  test_block_parsers.py  test_colour.py  test_distance_level.py  test_image.py  test_indexed_trilist.py  test_light_material.py  test_light_model_cfg.py  test_list.py  test_lod_control.py  test_matrix.py  test_named_filter_mode.py  test_named_shader.py  test_point.py  test_points_list.py  test_prim_state.py  test_primitives_list.py  test_shape.py  test_shape_header.py  test_shapeio_compression.py  test_texture.py  test_uv_op.py  test_uv_point.py  test_vector.py  test_volume_sphere.py  test_vtx_state.py
tests/data/: DK10f_A1tPnt5dLft_compressed.s  DK10f_A1tPnt5dLft_serialized.s  w-005655+015119.w  w-005655+015119_compressed.w
